Adiciona texto à introdução sobre regressão

--- a/5-regressao/1-regressao-linear.Rmd
+++ b/5-regressao/1-regressao-linear.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "regressão linear"
-author: "Nazareno Andrade e João Arthur B. Monteiro"
+title: "Regressão Linear"
+author: "Nazareno Andrade"
 output: 
   html_notebook:
     theme: readable
@@ -18,16 +18,40 @@ library(modelr)
 library(broom)
 ```
 
+# Nosso objetivo
+
+Até aqui, já conhecemos diferentes formas de sumarizar uma variável com uma estatística (ex: média, mediana, desvio padrão). Conhecemos também uma forma de avaliar a força e a direção da relação entre duas variáveis, com coeficientes de correlação. 
+
+Com regressão, queremos dar os seguintes passos adiante:
+
+   * descrever além da força e da direção de uma relação, sua *forma*. Por exemplo, queremos além de dizer que pessoas mais altas em geral pesam mais, dizer o quanto se espera que uma pessoa pese a mais se ela for 20cm mais alta que outra.   
+   * descrever a relação entre mais de duas variáveis. Por exemplo, dizer que ao adicionar 1GB de memória a mais em uma VM (máquina virtual) e não mexer no número de vCPUs que ela tem, um servidor web rodando nessa VM conseguirá responder mais 20 req/s e adicionar uma vCPU sem mexer na memória aumenta a taxa de respostas em 40 req/s. 
+   
+Para descrever a relação entre as variávies dessa forma, escolheremos uma variável na qual nos interessa entender o efeito das demais. Essa será nossa variável de resposta ou saída, ou variável dependente. As demais são variáveis de entrada, preditores ou variáveis independentes. No exemplo acima, taxa de respostas é a variável de resposta, e número de vCPUs e quantidade de memória da VM são variáveis de entrada, ou preditores, ou variáveis dependentes.
+
+## Funções, modelos, famílias
+
+Em regressão, descreveremos a relação entre variáveis como uma função matemática. Por exemplo, uma resposta de nossa análise será algo como uma dessas 3 funções:
+
+  * $reqs = 4 *mem + 10*vCPUs -2$, ou    
+  * $reqs = 1.2 *mem^2 + 10*vCPUs -7.1$ ou    
+  * $reqs = 2.1 *mem + 10*2^{vCPUs} - 4$   
+
+No primeiro exemplo, a taxa de requisição é uma função linear da quantidade de memória e do número de vCPUs. No segundo caso, a taxa de requisições aumenta com o quadrado do número de GBs de memória no nosso servidor. Isso quer dizer que o efeito de aumentar $mem$ de 0 para 1 ($=1.2*1 = 1.2$ nesse caso) não é o mesmo que o efeito de aumentar $mem$ de 1 para 2 ($=1.2*2^2 - 1.2=3.6$). Essa é a definição de não-linearidade, a propósito. 
+
+Na terceira função na lista, a taxa de requisições cresce exponencialmente com o número de vCPUs. Aumentar $vCPUs$ em uma unidade multiplica por 2 o valor do termo $10*2^{vCPUs}$.
+
+Esses três exemplos dão exemplos de três famílias de funções: lineares, polinomiais e exponenciais. Em regressão construiremos funções para descrever a relação entre variáveis. Normalmente a escolha da família de funções a ser usada é uma escolha do analista. Os métodos de regressão servirão para encontrar os valores dos coeficientes na função que melhor se ajustam aos seus dados. Você depois utilizará estatística para afirmar quão bem a função que o método encontrou representa seus dados. E iterará nesse processo, claro.
+
 # A intuição
+
+Estamos interessados na relação entre 
 
 ```{r}
 data(countyComplete)
 
 ggplot(countyComplete, aes(x = hs_grad, y = poverty)) + 
   geom_point(alpha = 0.4)
-
-#ggplot(countyComplete, aes(x = hs_grad, y = poverty)) + 
-#  geom_hex()
 ```
 
 No olho:
