Refatora e esclarece exemplos com hclust

--- a/3-Agrupamento-e-PCA/1-agrupamento-intro.Rmd
+++ b/3-Agrupamento-e-PCA/1-agrupamento-intro.Rmd
@@ -14,19 +14,22 @@ editor_options:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r load_code}
+```{r load_code, message=FALSE, warning=FALSE}
 library(tidyverse, warn.conflicts = F)
 library(rvest)
 library(plotly)
 library(cluster)
 library(ggdendro)
+library(gridExtra)
 theme_set(theme_light())
 source("plota_solucoes_hclust.R")
 ```
 
-# Tipos de filme de Scarlett Johansson
+# Agrupamento com filmes de Scarlett Johansson
 
 Usaremos dados do [Rotten Tomatoes](https://www.rottentomatoes.com) sobre os filmes de Scarlett Johansson. 
+
+O tipo de pergunta que queremos responder com agrupamento é _existem tipos de filmes claramente diferentes em termos de sucesso na crítica e público dentre os feitos por Scarlett Johansson?_
 
 O código abaixo lê a tabela no html da página do rottentomatoes.com, extrai, limpa e organiza os dados em um tibble (que é um subtipo de data.frame).
 
@@ -51,6 +54,22 @@ Se estiver sem conexão, use esse csv.
 filmes = read_csv("dados/filmes-scarlett-johanssson.csv")
 ```
 
+As variáveis aqui são: 
+
+* `RATING`: avaliação dos usuários e críticos no Rotten Tomatoes
+* `TITLE`: O filme
+* `CREDIT`: Que papel ela desempenhou neste filme
+* `BOX OFFICE`: Quantos milhões de dólares o filme lucrou em bilheterias nos EUA
+* `YEAR`: Ano de lançamento do filme
+
+```{r}
+glimpse(filmes)
+```
+
+```{r}
+skimr::skim(filmes)
+```
+
 
 ## A intuição
 
@@ -63,9 +82,12 @@ filmes %>%
     ggplot(aes(x = "Filmes", y = RATING)) + 
     geom_jitter(width = .01, height = 0, size = 2, alpha = .6)
 
-filmes %>% 
-    ggplot(aes(x = RATING)) + 
-    geom_histogram(bins = 16) + 
+filmes %>%
+    ggplot(aes(x = RATING)) +
+    geom_histogram(bins = 15,
+                   boundary = 0,
+                   fill = "#95CFB7",
+                   color = "black") + 
     geom_rug()
 ```
 
@@ -78,44 +100,79 @@ filmes %>%
 
 filmes %>% 
     ggplot(aes(x = `YEAR`)) + 
-    geom_histogram(bins = 17) + 
+    geom_histogram(bins = 17, 
+                   fill = "#FFF7BD",
+                   color = "black") + 
     geom_rug()
 ```
 
 Podemos gerar dados sintéticos que tenham tendência de grupos, também.
 
 ```{r}
-tibble(a = c(rnorm(100, mean = 10, sd = 10), 
-             rnorm(40, mean = 80, sd = 15))) %>% 
-    ggplot(aes(x = "teste", y = a)) + 
-    geom_jitter(width = .02, height = 0, size = 2, alpha = .6) 
+set.seed(123) # com a mesma semente, o gerador de números aleatórios gera a mesma sequência
+
+t1 = tibble(
+    formato = "Sem estrutura de grupos", 
+    variavel = runif(140, min = -5, max = 100)
+) 
+
+t2 = tibble(
+    formato = "Com estrutura de grupos",
+    variavel = c(rnorm(100, mean = 10, sd = 8), 
+                 rnorm(40, mean = 80, sd = 15))
+)
+
+t3 = tibble(
+    formato = "Grupos e outliers",
+    variavel = c(rnorm(100, mean = 10, sd = 10), 75, 110)
+)
+
+bind_rows(t1, t2, t3) %>% 
+    ggplot(aes(x = formato, y = variavel)) + 
+    geom_jitter(width = .05, height = 0, size = 2, alpha = .6, color = "#F04155") 
 
 ```
+
+## Em que escala estamos analisando estrutura? 
 
 Para a renda do filme, observar uma escala linear ou logarítmica levam a conclusões diferentes. 
 
 ```{r}
-filmes %>% 
-    ggplot(aes(x = "Filmes", y = `BOX OFFICE`)) + 
-    geom_jitter(width = .02, height = 0, size = 2, alpha = .6)  
-    
-filmes %>% 
-    ggplot(aes(x = "Filmes", y = `BOX OFFICE`)) + 
-    geom_jitter(width = .02, height = 0, size = 2, alpha = .6) + 
-    scale_y_log10()
+geom_jitter_formatado <- function(){
+    geom_jitter(width = .02, height = 0, size = 2, alpha = .8, color = "#95CFB7")  
+} 
 
-filmes %>% 
+geom_histogram_formatado <- function(){
+    geom_histogram(bins = 20, fill = "#95CFB7", color = "black")
+}
+    
+p1 = filmes %>% 
+    ggplot(aes(x = "Filmes", y = `BOX OFFICE`)) + 
+    geom_jitter_formatado() + 
+    labs(title = "Escala linear", x = "")
+    
+p2 = filmes %>% 
+    ggplot(aes(x = "Filmes", y = `BOX OFFICE`)) + 
+    geom_jitter_formatado() +
+    scale_y_log10() + 
+    labs(title = "Escala de log", x = "")
+
+p3 = filmes %>% 
     ggplot(aes(x = `BOX OFFICE`)) + 
-    geom_histogram(bins = 20) + 
+    geom_histogram_formatado()  + 
     geom_rug()
 
-filmes %>% 
+p4 = filmes %>% 
     ggplot(aes(x = `BOX OFFICE`)) + 
-    geom_histogram(bins = 20) + 
+    geom_histogram_formatado()  + 
     scale_x_log10() + 
     geom_rug()
 
+grid.arrange(p1, p2, p3, p4, ncol = 2)
+
 ```
+
+Ver os valores de uma variável numa escala de log é uma técnica muito útil em várias situações de análise de dados. Por isso vale dar uma lida no assunto. Mais explicações sobre escalas logarítmicas, quando/como usá-las e como lê-las  [nesse](https://blog.datawrapper.de/weeklychart-logscale2/) e [nesse](https://blog.datawrapper.de/weeklychart-logscale/) posts do pessoal do datawrapper.
 
 ## Agrupamento 
 
@@ -126,74 +183,106 @@ Para produzir uma solução de agrupamento precisamos de:
 * Processo de agrupamento 
 * Decidir quantos grupos existem
 
-Depois vem o principal: **avaliar e interpretar** a solução. _Agrupamento sempre dá um resultado. Nem sempre é útil_. 
+Depois vem o principal: **avaliar e interpretar** a solução. _Agrupamento sempre dá um resultado, mas nem sempre o resultado é útil_. 
 
 ## Com uma dimensão
 
 Há duas maneiras principais de agrupar: aglomerativa ou baseada em partição. Vamos explorar primeiro a **hierárquica aglomerativa**.
 
 ```{r}
+filmes = filmes %>% mutate(i = 1:n())
+
 distancias.long = filmes %>% 
     select(RATING) %>%
     dist(method = "euclidean") %>% 
     as.matrix %>% 
     reshape2::melt(varnames = c("row", "col"))
 
-distancias.long %>% 
-    ggplot(aes(x = row, y = col, fill = value)) + 
-    geom_tile()
+distancias.long = distancias.long %>% 
+    left_join(filmes %>% select(i, filme1 = TITLE), by = c("row" = "i")) %>% 
+    left_join(filmes %>% select(i, filme2 = TITLE), by = c("col" = "i")) %>% 
+    arrange(row)
 
-# distancias = filmes %>% 
-#     select(RATING) %>%
-#     dist(method = "euclidean") %>% 
-#     as.matrix %>% 
-#     heatmap()
+distancias.long
 ```
 
 
 
 ```{r}
 row.names(filmes) = NULL
+
 agrupamento_h = filmes %>% 
+    mutate(TITLE = paste(TITLE, RATING, sep = "-")) %>% 
     column_to_rownames("TITLE") %>% # hclust precisa dos rótulos em nomes de linha (ruim)
     select(RATING) %>%
     dist(method = "euclidian") %>% 
     hclust(method = "ward.D")
 
-ggdendrogram(agrupamento_h, rotate = T, size = 2) 
-
-ggdendrogram(agrupamento_h, rotate = T, size = 2) + 
-    geom_hline(yintercept = 45, colour = "red")
+ggdendrogram(agrupamento_h, rotate = T, size = 2, theme_dendro = F) + 
+    labs(y = "Dissimilaridade")
 ```
 
-Cada junção é um passo do algoritmo. A altura na dendrograma em cada passo significa a dissimilaridade entre os pontos ou grupos juntados naquele passo. 
+Cada junção é um passo do algoritmo. A altura na dendrograma em cada passo significa a dissimilaridade entre os pontos ou grupos juntados naquele passo, calculado pelo critério de aglomeração. 
 
 Na medida que vamos aglomerando, as dissimilaridades nas junções tendem a ir aumentando caso haja estrutura de grupos.
 
 ```{r}
-data.frame(k = 1:NROW(agrupamento_h$height), 
-           height = agrupamento_h$height) %>% 
-    ggplot(aes(x = k, y = height)) + \
+tibble(alturas_dendrograma = agrupamento_h$height) %>% 
+    mutate(k = 1:n()) %>% 
+    ggplot(aes(x = k, y = alturas_dendrograma)) + 
     geom_line(colour = "grey") + 
     geom_point() + 
-    labs(x = "Junções feitas (34 - clusters)", y = "Dissimilaridade na junção")
-
+    labs(x = "Junções feitas (34 - clusters)", 
+         y = "Dissimilaridade na junção", 
+         title = "Dissimilaridade em cada aglomeração")
 ```
+
+
+
+```{r}
+tibble(alturas_dendrograma = agrupamento_h$height) %>% 
+    mutate(k = 1:n(), 
+           delta = alturas_dendrograma - lag(alturas_dendrograma, default = 0)) %>% 
+    ggplot(aes(x = k, y = delta)) + 
+    geom_col(width = .1) + 
+    geom_point() + 
+    labs(x = "Junções feitas (34 - clusters)", 
+         y = "Junção atual - Junção anterior", 
+         title = "Quão mais dissimilar foi a junção n comparada com n-1")
+```
+
+Onde está o ponto em que as distâncias aglomeradas começa a crescer no dendrograma:
+
+```{r}
+ggdendrogram(agrupamento_h, rotate = T, size = 2) + 
+    geom_hline(yintercept = 100, colour = "red")
+```
+
+## Visualizando os agrupamentos
 
 Vejamos as soluções com diferentes números de grupos.
 
 ```{r}
-solucoes = tibble(k = 1:9)
+get_grupos <- function(agrupamento, num_grupos){
+    agrupamento %>% 
+        cutree(num_grupos) %>% 
+        as.data.frame() %>% 
+        mutate(label = rownames(.)) %>% 
+        gather(key =  "k", value = "grupo", -label) %>% 
+        mutate(grupo = as.character(grupo))
+}
 
-atribuicoes = solucoes %>% 
-    group_by(k) %>% 
-    do(cbind(filmes, 
-             grupo = as.character(cutree(agrupamento_h, .$k)))) 
+atribuicoes = get_grupos(agrupamento_h, num_grupos = 1:8)
+
+atribuicoes = atribuicoes %>% 
+    mutate(TITLE = label %>% word(1, sep = "-")) %>% 
+    left_join(filmes, by = "TITLE")
 
 atribuicoes %>% 
     ggplot(aes(x = "Filmes", y = RATING, colour = grupo)) + 
-    geom_jitter(width = .02, height = 0, size = 2, alpha = .6) + 
-    facet_wrap(~ paste(k, " grupos"))
+    geom_jitter(width = .02, height = 0, size = 1.6, alpha = .6) + 
+    facet_wrap(~ paste(k, " grupos")) + 
+    scale_color_brewer(palette = "Dark2")
 
 ```
 
@@ -209,11 +298,11 @@ filmes %>%
 
 ### Variando o método de linkage
 
-```{r}
-plota_hclusts_1d(filmes, "RATING", 
+```{r warning=FALSE}
+plota_hclusts_1d(filmes, 
+                 "RATING", 
                  linkage_method = "centroid", # single, complete, average, centroid, median, ...
                  ks = 1:6)
-names(iris)
 ```
 
 ### Com outras variáveis
@@ -253,10 +342,10 @@ agrupamento_hs = filmes %>%
     column_to_rownames("TITLE") %>%
     select(RATING) %>%
     dist(method = "euclidean") %>% 
-    hclust(method = "complete")
+    hclust(method = "ward.D")
 
 
-plot(silhouette(cutree(agrupamento_hs, k = 4), distancias))
+plot(silhouette(cutree(agrupamento_hs, k = 3), distancias))
 plot(silhouette(cutree(agrupamento_hs, k = 2), distancias))
 ```
 
@@ -267,7 +356,7 @@ p = filmes %>%
     ggplot(aes(x = RATING, y = `BOX OFFICE`, label = TITLE)) + 
     geom_point() 
 p
-#ggplotly(p)
+ggplotly(p)
 ```
 
 
@@ -280,8 +369,8 @@ agrupamento_h_2d = filmes %>%
 
 ggdendrogram(agrupamento_h_2d, rotate = TRUE)
 
-data.frame(k = NROW(agrupamento_h_2d$height):1, 
-           height = agrupamento_h_2d$height) %>% 
+data.frame(height = agrupamento_h_2d$height) %>% 
+    mutate(k = 1:n()) %>% 
     ggplot(aes(x = k, y = height)) + 
     geom_line(colour = "grey") + 
     geom_point() + 
@@ -295,30 +384,53 @@ Como sempre, o algoritmo encontra grupos. No caso, parecem até bem separados. V
 plota_hclusts_2d(agrupamento_h_2d, 
                  filmes, 
                  c("RATING", "`BOX OFFICE`"), 
-                 linkage_method = "centroid", ks = 1:6)
+                 linkage_method = "centroid", ks = 1:6) + 
+    scale_color_brewer(palette = "Dark2")
 ```
 
-O agrupamento está acontecendo todo em função de BOX OFFICE, apenas. Como as escalas são diferentes, BOX OFFICE domina qualquer cálculo de distância euclidiana. 
+A distinção de grupos no agrupamento está acontecendo toda em função de BOX OFFICE, apenas. Como as escalas são diferentes, BOX OFFICE domina qualquer cálculo de distância euclidiana. 
 
-Solução: standardize (aka scale).
+**Solução: standardize (aka scale).**
 
 ```{r}
 agrupamento_h_2d = filmes %>% 
+    mutate_at(vars(RATING, `BOX OFFICE`), funs(scale)) %>%
     column_to_rownames("TITLE") %>%
-    select(RATING, `BOX OFFICE`) %>% 
-    mutate(`BOX OFFICE` = log10(`BOX OFFICE`)) %>% 
-    mutate_all(funs(scale)) %>% 
+    select(RATING, `BOX OFFICE`) %>%
     dist(method = "euclidean") %>% 
     hclust(method = "centroid")
 
-ggdendrogram(agrupamento_h_2d, rotate = TRUE)
+ggdendrogram(agrupamento_h_2d, rotate = TRUE, theme_dendro = F)
+
+plota_hclusts_2d(agrupamento_h_2d, 
+                 filmes, 
+                 c("RATING", "`BOX OFFICE`"), 
+                 linkage_method = "ward.D", ks = 1:6) 
+
+```
+
+E com escala de log para bilheteria? 
+
+```{r}
+agrupamento_h_2d = filmes %>% 
+    mutate(`BOX OFFICE` = log10(`BOX OFFICE`)) %>%
+    mutate_at(vars(RATING, `BOX OFFICE`), funs(scale)) %>%
+    column_to_rownames("TITLE") %>%
+    select(RATING, `BOX OFFICE`) %>%
+    dist(method = "euclidean") %>% 
+    hclust(method = "centroid")
+
+ggdendrogram(agrupamento_h_2d, rotate = TRUE, theme_dendro = F)
 
 filmes2 = filmes %>% mutate(`BOX OFFICE` = log10(`BOX OFFICE`))
 plota_hclusts_2d(agrupamento_h_2d, 
                  filmes2, 
                  c("RATING", "`BOX OFFICE`"), 
-                 linkage_method = "ward.D", ks = 1:6) + scale_y_log10()
+                 linkage_method = "centroid", ks = 1:6) + 
+    scale_y_log10() + 
+    scale_color_brewer(palette = "Dark2")
 ```
+
 
 ```{r}
 distancias = filmes %>% 
